# python-build-testing

./: LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
src/: consts.py  funcs.py
tests/: test_funcs.py
